--- a/index.html
+++ b/index.html
@@ -270,6 +270,7 @@
   </div>
 
   <h1 class="credit">Designed & Developed <i class="fa fa-heart pulse"></i> by <a href="https://codewithtanveer.blogspot.com/"> TashinIslamFahim</a></h1>
+  <h1 class="credit">Designed & Developed <i class="fa fa-heart pulse"></i> by <a href="https://tashinislamfahim.github.io/my-portfolio/"> TashinIslamFahim</a></h1>
 
 </section>
 <a href="#home" aria-label="ScrollTop" class="fas fa-angle-up" id="scroll-top"></a>
