--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://kit.fontawesome.com/95a2002ecf.js" crossorigin="anonymous"></script>
     <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.jpg" type="image/x-png">
-    <title>Portfolio | Tashin</title>
+    <title>Tashin | Portfolio</title>
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -269,7 +269,6 @@
       </div>
   </div>
 
-  <h1 class="credit">Designed & Developed <i class="fa fa-heart pulse"></i> by <a href="https://codewithtanveer.blogspot.com/"> TashinIslamFahim</a></h1>
   <h1 class="credit">Designed & Developed <i class="fa fa-heart pulse"></i> by <a href="https://tashinislamfahim.github.io/my-portfolio/"> TashinIslamFahim</a></h1>
 
 </section>
