--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <meta name="keywords" content="portfolio, portfolio design, portfolio website, personal portfolio" />
     <meta name="description" content="Welcome to Tahin's Portfolio." />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://kit.fontawesome.com/95a2002ecf.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://kit.fontawesome.com/95a2002ecf.js" crossorigin="anonymous"></script>-->
     <link id='favicon' rel="shortcut icon" href="./assets/images/favicon.jpg" type="image/x-png">
     <title>Tashin | Portfolio</title>
 
@@ -16,20 +17,23 @@
 </head>
 <body>
 <header>
-        <a href="/" class="logo"><i class="fa-solid fa-code"></i> TashinIslamFahim</a>
+  <a href="/" class="logo"><i class="fa-solid fa-code"></i> TashinIslamFahim</a>
 
-        <div id="menu" class="fas fa-bars"></div>
-        <nav class="navbar">
-            <ul>
-            <li><a class="active" href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#work">Work</a></li>
-            <li><a href="#experience">Experience</a></li>
-            </ul>
-        </nav>
+  <!-- 3 dots menu icon -->
+  <div id="menu" class="fas fa-ellipsis-v" style="font-size:24px; cursor:pointer;"></div>
+
+  <nav class="navbar">
+    <ul>
+      <li><a class="active" href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#skills">Skills</a></li>
+      <li><a href="#education">Education</a></li>
+      <li><a href="#work">Work</a></li>
+      <li><a href="#experience">Experience</a></li>
+    </ul>
+  </nav>
 </header>
+
 <section class="home" id="home">
     <div id="particles-js"></div>
 
