--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 <body>
 <header>
-  <a href="/" class="logo"><i class="fa-solid fa-code"></i> TashinIslamFahim</a>
+  <a href="#home" class="logo"><i class="fa-solid fa-code"></i> TashinIslamFahim</a>
 
   <!-- 3 dots menu icon -->
   <div id="menu" class="fas fa-ellipsis-v" style="font-size:24px; cursor:pointer;"></div>
